<resources>
    <string name="app_name">My Football God</string>
    <string name="play_game">Play Game</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="play_again">Play Again</string>
    <string name="new_high_score">New High Score!!!</string>
    <string name="your_score">Your Score</string>
    <string-array name="Select_Player">
        <item>choose your hero..</item>
        <item>ronaldo</item>
        <item>messi</item>
        <item>salah</item>
    </string-array>

</resources>
