<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreActivity">

    <ImageView
        android:src="@drawable/bg2"
        android:id="@+id/player_image"
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:padding="10dp"
        android:layout_margin="24dp"
        android:id="@+id/score_layout"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/your_score_text"
            android:textStyle="bold"
            android:textColor="#e10b0b"
            android:textSize="40sp"
            android:text="@string/your_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/score_number_text"
            android:textStyle="bold"
            android:textColor="#e10b0b"
            android:textSize="100sp"
            tools:text="10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:visibility="gone"
            android:id="@+id/high_score_text"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#e10b0b"
            android:textSize="22.67sp"
            android:text="@string/new_high_score"/>
    </LinearLayout>
    <Button
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="50dp"
        android:textSize="16.67dp"
        android:textColor="@color/allTextColor"
        android:background="#6F000000"
        android:onClick="displayMenu"
        android:layout_below="@+id/score_layout"
        android:layout_marginBottom="20dp"
        android:id="@+id/play_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_again"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true" />
</RelativeLayout>