<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">
    <ImageView
        android:src="@drawable/bg2"
        android:id="@+id/player_image"
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <LinearLayout
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:textColor="#e10b0b"
        android:background="#6F000000"
        android:layout_marginTop="30dp"
        android:id="@+id/choose_player_text"
        android:textSize="30.87dp"
        android:textStyle="bold"
        android:text="Choose Football God"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_marginTop="170dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/layout_spinner"
        android:layout_below="@+id/choose_player_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#6F000000"
        android:orientation="horizontal">

        <Spinner
            android:popupBackground="@android:color/black"
            android:paddingLeft="15dp"
            android:id="@+id/select_player_spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:spinnerMode="dropdown" />

        <ImageView
            android:onClick="openSpinner"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/drop" />

    </LinearLayout>



<Button
    android:textSize="16.67dp"
    android:textColor="@color/allTextColor"
    android:background="#6F000000"
    android:onClick="displayQuestions"
    android:layout_below="@+id/layout_spinner"
    android:layout_marginBottom="20dp"
    android:id="@+id/play_game_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/play_game"
    android:textAllCaps="false"
    android:layout_centerHorizontal="true" />
    <Button
        android:textSize="16.67dp"

        android:textColor="@color/allTextColor"
        android:background="#6F000000"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/play_game_button"
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"/>
    <Button
        android:textSize="16.67dp"
        android:textColor="@color/allTextColor"
        android:background="#6F000000"
        android:layout_below="@+id/settings_button"
        android:id="@+id/about_button"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/about"/>
    </LinearLayout>

</RelativeLayout>